[gd_scene load_steps=92 format=2]

[ext_resource path="res://entities/PhysicsEntity.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sub/sub.png" type="Texture" id=2]
[ext_resource path="res://entities/sub/AnimatedSprite.gd" type="Script" id=3]
[ext_resource path="res://assets/sub/spotlight.png" type="Texture" id=4]
[ext_resource path="res://assets/sub/sub_light.png" type="Texture" id=5]
[ext_resource path="res://assets/sub/sub2.png" type="Texture" id=6]
[ext_resource path="res://entities/sub/DamageParticle.gd" type="Script" id=7]
[ext_resource path="res://assets/sub/bubbles_texture.tres" type="Texture" id=8]
[ext_resource path="res://entities/sub/BallastBubbles.gd" type="Script" id=9]
[ext_resource path="res://assets/sounds/Submarine Prop Master.wav" type="AudioStream" id=10]
[ext_resource path="res://entities/sub/EngineBubbles.gd" type="Script" id=11]
[ext_resource path="res://entities/sub/sound_players/EngineSound.gd" type="Script" id=12]
[ext_resource path="res://assets/sounds/14 SonarPing_BW.59099.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sub/sonar_arc.png" type="Texture" id=14]
[ext_resource path="res://assets/sounds/15 SonarPing_BW.59100.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sub/sonar_particle_texture.tres" type="Texture" id=16]
[ext_resource path="res://assets/sub/SonarArcMaterial.tres" type="Material" id=17]
[ext_resource path="res://entities/sub/SonarParticle.gd" type="Script" id=18]
[ext_resource path="res://entities/sub/sound_players/PingEchoPlayer.gd" type="Script" id=19]
[ext_resource path="res://entities/sub/Sonar.gd" type="Script" id=20]
[ext_resource path="res://assets/sub/bubble1.png" type="Texture" id=21]
[ext_resource path="res://entities/controllers/Camera.gd" type="Script" id=22]
[ext_resource path="res://entities/controllers/DriveController.gd" type="Script" id=23]
[ext_resource path="res://entities/sub/PlayerController.gd" type="Script" id=24]
[ext_resource path="res://addons/smoothing/smoothing_2d.gd" type="Script" id=25]
[ext_resource path="res://assets/ui/ui_theme_small.tres" type="Theme" id=26]
[ext_resource path="res://assets/sounds/Alarm Fade Out.wav" type="AudioStream" id=27]
[ext_resource path="res://assets/sounds/Damage Gravel 2 Master.wav" type="AudioStream" id=28]
[ext_resource path="res://assets/sounds/Bubbles 3 Master.wav" type="AudioStream" id=29]
[ext_resource path="res://assets/sounds/12 Light switch.wav" type="AudioStream" id=30]
[ext_resource path="res://entities/sub/sound_players/TerrainDamagePlayer.gd" type="Script" id=31]
[ext_resource path="res://entities/sub/sound_players/LittleDamagePlayer.gd" type="Script" id=32]
[ext_resource path="res://entities/sub/sound_players/BigDamagePlayer.gd" type="Script" id=33]
[ext_resource path="res://entities/sub/sound_players/BallastBubblesPlayer.gd" type="Script" id=34]
[ext_resource path="res://entities/sub/sound_players/LightClickPlayer.gd" type="Script" id=35]
[ext_resource path="res://assets/sounds/Damage 1 Master.wav" type="AudioStream" id=36]
[ext_resource path="res://assets/sounds/Breach Master.wav" type="AudioStream" id=37]
[ext_resource path="res://assets/sounds/Damage 2 Master.wav" type="AudioStream" id=38]
[ext_resource path="res://entities/controllers/input_controller/ThrottleInputController.gd" type="Script" id=39]
[ext_resource path="res://entities/controllers/input_controller/BuoyancyInputController.gd" type="Script" id=40]
[ext_resource path="res://entities/sub/UI.gd" type="Script" id=41]
[ext_resource path="res://entities/controllers/health_controller/HealthController.tscn" type="PackedScene" id=42]
[ext_resource path="res://entities/sub/FlareLauncher.gd" type="Script" id=43]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5
bounce = 0.56

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.15743
height = 19.9959

[sub_resource type="CapsuleShape2D" id=3]
radius = 9.39685
height = 23.5681

[sub_resource type="Animation" id=4]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "move",
"speed": 8.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "roll back",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "roll",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "roll over",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=29]
colors = PoolColorArray( 0.25098, 0.466667, 0.533333, 1, 0.25098, 0.466667, 0.533333, 0 )

[sub_resource type="GradientTexture" id=30]
gradient = SubResource( 29 )

[sub_resource type="Curve" id=31]
max_value = 2.0
_data = [ Vector2( 0, 0.486364 ), 0.0, 0.940909, 0, 1, Vector2( 1, 1.42727 ), 0.940909, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=32]
curve = SubResource( 31 )

[sub_resource type="ParticlesMaterial" id=33]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
gravity = Vector3( 0, -20, 0 )
initial_velocity = 2.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 32 )
color_ramp = SubResource( 30 )
anim_speed_random = 1.0

[sub_resource type="ParticlesMaterial" id=34]
emission_shape = 1
emission_sphere_radius = 0.2
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.05
scale_random = 0.04
color = Color( 1, 0, 0, 1 )

[sub_resource type="Gradient" id=35]
colors = PoolColorArray( 0.25098, 0.466667, 0.533333, 1, 0.25098, 0.466667, 0.533333, 0 )

[sub_resource type="GradientTexture" id=36]
gradient = SubResource( 35 )

[sub_resource type="Curve" id=37]
max_value = 2.0
_data = [ Vector2( 0, 0.486364 ), 0.0, 0.940909, 0, 1, Vector2( 1, 1.42727 ), 0.940909, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=38]
curve = SubResource( 37 )

[sub_resource type="ParticlesMaterial" id=39]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
gravity = Vector3( 0, -20, 0 )
initial_velocity = 2.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 38 )
color_ramp = SubResource( 36 )
anim_speed_random = 1.0

[sub_resource type="CircleShape2D" id=40]
radius = 22.6978

[sub_resource type="Gradient" id=41]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=42]
gradient = SubResource( 41 )

[sub_resource type="Curve" id=43]
max_value = 2.5
_data = [ Vector2( 0, 0 ), 0.0, 2.5, 0, 1, Vector2( 1, 2.5 ), 2.5, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=44]
curve = SubResource( 43 )

[sub_resource type="ParticlesMaterial" id=45]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 2.0
gravity = Vector3( 0, 0, 0 )
scale_curve = SubResource( 44 )
color_ramp = SubResource( 42 )

[sub_resource type="ParticlesMaterial" id=46]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="CircleShape2D" id=47]
radius = 126.347

[sub_resource type="CircleShape2D" id=48]
radius = 22.6978

[node name="Player" type="Node2D"]

[node name="PhysicsEntity" parent="." instance=ExtResource( 1 )]
physics_material_override = SubResource( 1 )
drag_friction_amount = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhysicsEntity"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="PhysicsEntity"]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhysicsEntity/HurtBox"]
rotation = 1.5708
shape = SubResource( 3 )

[node name="DriveController" type="Node" parent="."]
script = ExtResource( 23 )
auto_max_speed = 50.0

[node name="PlayerController" type="Node" parent="."]
script = ExtResource( 24 )

[node name="HealthController" parent="." instance=ExtResource( 42 )]

[node name="ThrottleInputController" type="Node" parent="."]
script = ExtResource( 39 )

[node name="BuoyancyInputController" type="Node" parent="."]
script = ExtResource( 40 )

[node name="PhysicsSmoothing" type="Node2D" parent="."]
script = ExtResource( 25 )
target = NodePath("../PhysicsEntity")
flags = 7

[node name="Camera" type="Camera2D" parent="PhysicsSmoothing"]
light_mask = 3
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
script = ExtResource( 22 )

[node name="FadeToBlackLayer" type="CanvasLayer" parent="PhysicsSmoothing/Camera"]
layer = 128

[node name="ColorRect" type="ColorRect" parent="PhysicsSmoothing/Camera/FadeToBlackLayer"]
margin_left = -2048.0
margin_top = -2048.0
margin_right = 2048.0
margin_bottom = 2048.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeToBlackAnimationPlayer" type="AnimationPlayer" parent="PhysicsSmoothing/Camera/FadeToBlackLayer/ColorRect"]
anims/FadeOut = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="PhysicsSmoothing/Camera"]
texture = ExtResource( 21 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="PhysicsSmoothing"]
frames = SubResource( 28 )
animation = "idle"
playing = true
script = ExtResource( 3 )

[node name="BallastBubblesLeft" type="Particles2D" parent="PhysicsSmoothing"]
light_mask = 0
position = Vector2( -5, -0.0393734 )
z_index = 1
emitting = false
amount = 32
one_shot = true
randomness = 1.0
local_coords = false
process_material = SubResource( 33 )
texture = ExtResource( 8 )
script = ExtResource( 9 )

[node name="BallastBubblesRight" type="Particles2D" parent="PhysicsSmoothing"]
light_mask = 0
position = Vector2( 5, 0 )
z_index = 1
emitting = false
amount = 32
one_shot = true
randomness = 1.0
local_coords = false
process_material = SubResource( 33 )
texture = ExtResource( 8 )
script = ExtResource( 9 )

[node name="DamageParticle" type="Particles2D" parent="PhysicsSmoothing"]
light_mask = 0
emitting = false
amount = 4
lifetime = 0.2
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 34 )
texture = ExtResource( 6 )
script = ExtResource( 7 )

[node name="Glow" type="Light2D" parent="PhysicsSmoothing"]
light_mask = 3
texture = ExtResource( 5 )
texture_scale = 2.0
color = Color( 1, 0.945098, 0.694118, 1 )
range_height = 10.0
range_layer_min = -120
range_layer_max = 25
range_item_cull_mask = 3
shadow_enabled = true
shadow_gradient_length = 10.0
shadow_filter = 1
shadow_item_cull_mask = 3

[node name="PropAnchor" type="Position2D" parent="PhysicsSmoothing"]
position = Vector2( -20, 0 )

[node name="EngineSoundPlayer" type="AudioStreamPlayer2D" parent="PhysicsSmoothing/PropAnchor"]
position = Vector2( 20, 0 )
stream = ExtResource( 10 )
volume_db = -7.0
script = ExtResource( 12 )

[node name="EngineBubbles" type="Particles2D" parent="PhysicsSmoothing/PropAnchor"]
light_mask = 0
emitting = false
amount = 32
randomness = 1.0
local_coords = false
process_material = SubResource( 39 )
texture = ExtResource( 8 )
script = ExtResource( 11 )

[node name="PlayerSoundArea" type="Area2D" parent="PhysicsSmoothing/PropAnchor"]
position = Vector2( 20, 0 )

[node name="Circle" type="CollisionShape2D" parent="PhysicsSmoothing/PropAnchor/PlayerSoundArea"]
shape = SubResource( 40 )

[node name="TopAnchor" type="Position2D" parent="PhysicsSmoothing"]
position = Vector2( 0, -8.1758 )

[node name="Sonar" type="Node2D" parent="PhysicsSmoothing/TopAnchor"]
position = Vector2( 0, -3.8242 )
script = ExtResource( 20 )

[node name="SonarCooldown" type="Timer" parent="PhysicsSmoothing/TopAnchor/Sonar"]
wait_time = 2.0
one_shot = true

[node name="SonarParticle" type="Particles2D" parent="PhysicsSmoothing/TopAnchor/Sonar"]
light_mask = -2147483647
emitting = false
amount = 4
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 45 )
texture = ExtResource( 16 )
script = ExtResource( 18 )

[node name="Timer" type="Timer" parent="PhysicsSmoothing/TopAnchor/Sonar/SonarParticle"]
one_shot = true

[node name="PingEchoPlayer" type="AudioStreamPlayer2D" parent="PhysicsSmoothing/TopAnchor/Sonar/SonarParticle"]
stream = ExtResource( 15 )
volume_db = -25.0
pitch_scale = 0.75
script = ExtResource( 19 )

[node name="GabageCollectTimer" type="Timer" parent="PhysicsSmoothing/TopAnchor/Sonar/SonarParticle"]
wait_time = 5.0
one_shot = true

[node name="SonarActiveParticle" type="Particles2D" parent="PhysicsSmoothing/TopAnchor/Sonar"]
position = Vector2( 0, 2 )
emitting = false
amount = 1
lifetime = 0.2
process_material = SubResource( 46 )
texture = ExtResource( 16 )

[node name="SonarArc" type="Particles2D" parent="PhysicsSmoothing/TopAnchor/Sonar"]
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
local_coords = false
process_material = ExtResource( 17 )
texture = ExtResource( 14 )

[node name="SonarPingPlayer" type="AudioStreamPlayer" parent="PhysicsSmoothing/TopAnchor/Sonar"]
stream = ExtResource( 13 )
volume_db = -9.0

[node name="SonarAggroArea" type="Area2D" parent="PhysicsSmoothing/TopAnchor/Sonar"]
position = Vector2( 0, -1.45908 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhysicsSmoothing/TopAnchor/Sonar/SonarAggroArea"]
position = Vector2( 0, -115 )
shape = SubResource( 47 )

[node name="SonarAggroTimer" type="Timer" parent="PhysicsSmoothing/TopAnchor/Sonar/SonarAggroArea"]
wait_time = 0.5
one_shot = true

[node name="BottomAnchor" type="Position2D" parent="PhysicsSmoothing"]
position = Vector2( 0, 8.1758 )

[node name="FlareLauncher" type="Node2D" parent="PhysicsSmoothing/BottomAnchor"]
script = ExtResource( 43 )

[node name="FrontAnchor" type="Position2D" parent="PhysicsSmoothing"]
position = Vector2( 12.4867, 0 )

[node name="Spotlight" type="Light2D" parent="PhysicsSmoothing/FrontAnchor"]
light_mask = 3
rotation = -1.5708
scale = Vector2( 2.5, 1 )
z_index = -1
texture = ExtResource( 4 )
offset = Vector2( 0, 233.649 )
color = Color( 1, 0.945098, 0.694118, 1 )
range_height = 5.0
range_layer_min = -120
range_layer_max = 25
range_item_cull_mask = 3
shadow_enabled = true
shadow_gradient_length = 10.0
shadow_item_cull_mask = 3

[node name="SpotlightArea" type="Area2D" parent="PhysicsSmoothing/FrontAnchor/Spotlight"]
position = Vector2( 0, -9.252 )
scale = Vector2( 0.5, 1 )
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PhysicsSmoothing/FrontAnchor/Spotlight/SpotlightArea"]
polygon = PoolVector2Array( 0, 9.603, -11.1443, 12.0976, -21.3896, 20.5612, -24.9532, 55.5289, -16.2191, 142.928, -4.24496, 226.755, 4.245, 226.755, 16.219, 142.928, 24.953, 55.529, 21.39, 20.561, 11.144, 12.098 )

[node name="SpotlightSprite" type="Sprite" parent="PhysicsSmoothing/FrontAnchor/Spotlight/SpotlightArea"]
visible = false
position = Vector2( 0, 102 )
texture = ExtResource( 4 )
offset = Vector2( 0, 141 )

[node name="PlayerSoundArea" type="Area2D" parent="PhysicsSmoothing"]

[node name="Circle" type="CollisionShape2D" parent="PhysicsSmoothing/PlayerSoundArea"]
shape = SubResource( 48 )

[node name="LightClickPlayer" type="AudioStreamPlayer" parent="PhysicsSmoothing"]
stream = ExtResource( 30 )
volume_db = -3.0
bus = "Sumarine"
script = ExtResource( 35 )

[node name="BallastBubblesPlayer" type="AudioStreamPlayer" parent="PhysicsSmoothing"]
stream = ExtResource( 29 )
volume_db = -8.0
bus = "Sumarine"
script = ExtResource( 34 )

[node name="TerrainDamagePlayer" type="AudioStreamPlayer" parent="PhysicsSmoothing"]
stream = ExtResource( 28 )
volume_db = -8.0
bus = "Sumarine"
script = ExtResource( 31 )

[node name="Timer" type="Timer" parent="PhysicsSmoothing/TerrainDamagePlayer"]
wait_time = 1.5

[node name="LittleDamagePlayer" type="AudioStreamPlayer" parent="PhysicsSmoothing"]
stream = ExtResource( 38 )
volume_db = -10.0
bus = "Sumarine"
script = ExtResource( 32 )

[node name="Timer" type="Timer" parent="PhysicsSmoothing/LittleDamagePlayer"]
wait_time = 0.5
one_shot = true

[node name="BigDamagePlayer" type="AudioStreamPlayer" parent="PhysicsSmoothing"]
stream = ExtResource( 36 )
volume_db = -5.0
bus = "Sumarine"
script = ExtResource( 33 )

[node name="Timer" type="Timer" parent="PhysicsSmoothing/BigDamagePlayer"]
wait_time = 1.5

[node name="WaterBreachPlayer" type="AudioStreamPlayer" parent="PhysicsSmoothing"]
stream = ExtResource( 37 )
volume_db = -5.0
bus = "Environment"

[node name="AlarmPlayer" type="AudioStreamPlayer" parent="PhysicsSmoothing"]
stream = ExtResource( 27 )
volume_db = -9.0
bus = "Sumarine"

[node name="UI" type="CanvasLayer" parent="."]
layer = 100
script = ExtResource( 41 )

[node name="Depth" type="Label" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -426.0
margin_top = -226.0
margin_right = -30.0
margin_bottom = -22.0
grow_horizontal = 0
theme = ExtResource( 26 )
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Throttle" type="Label" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 38.0
margin_top = -73.0
margin_right = 725.0
margin_bottom = -28.0
grow_horizontal = 0
theme = ExtResource( 26 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Throttle"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buoyancy" type="Label" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 39.0
margin_top = -123.0
margin_right = 726.0
margin_bottom = -76.0
grow_horizontal = 0
theme = ExtResource( 26 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Buoyancy"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hull" type="Label" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 41.0
margin_top = -172.0
margin_right = 728.0
margin_bottom = -122.0
grow_horizontal = 0
theme = ExtResource( 26 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Hull"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="light_toggle" from="PlayerController" to="PhysicsSmoothing/LightClickPlayer" method="_on_PlayerController_light_toggle"]
[connection signal="sonar_toggle" from="PlayerController" to="PhysicsSmoothing/TopAnchor/Sonar" method="_on_Player_sonar_toggle"]
[connection signal="damage" from="HealthController" to="PhysicsSmoothing/DamageParticle" method="_on_HealthController_damage"]
[connection signal="damage" from="HealthController" to="PhysicsSmoothing/BigDamagePlayer" method="_on_HealthController_damage"]
[connection signal="damage" from="HealthController" to="PhysicsSmoothing/LittleDamagePlayer" method="_on_HealthController_damage"]
[connection signal="throttle_change" from="ThrottleInputController" to="PhysicsSmoothing/PropAnchor/EngineBubbles" method="_on_ThrottleInputController_throttle_change"]
[connection signal="throttle_change" from="ThrottleInputController" to="PhysicsSmoothing/PropAnchor/EngineSoundPlayer" method="_on_ThrottleInputController_throttle_change"]
[connection signal="throttle_change" from="ThrottleInputController" to="PhysicsSmoothing/AnimatedSprite" method="_on_ThrottleInputController_throttle_change"]
[connection signal="buoyancy_down" from="BuoyancyInputController" to="PhysicsSmoothing/BallastBubblesLeft" method="_on_BuoyancyInputController_buoyancy_down"]
[connection signal="buoyancy_down" from="BuoyancyInputController" to="PhysicsSmoothing/BallastBubblesRight" method="_on_BuoyancyInputController_buoyancy_down"]
[connection signal="buoyancy_down" from="BuoyancyInputController" to="PhysicsSmoothing/BallastBubblesPlayer" method="_on_BuoyancyInputController_buoyancy_down"]
[connection signal="animation_finished" from="PhysicsSmoothing/AnimatedSprite" to="PhysicsSmoothing/AnimatedSprite" method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="PhysicsSmoothing/TopAnchor/Sonar/SonarCooldown" to="PhysicsSmoothing/TopAnchor/Sonar" method="_on_SonarCooldown_timeout"]
[connection signal="timeout" from="PhysicsSmoothing/TopAnchor/Sonar/SonarParticle/Timer" to="PhysicsSmoothing/TopAnchor/Sonar/SonarParticle" method="_on_Timer_timeout"]
[connection signal="timeout" from="PhysicsSmoothing/TopAnchor/Sonar/SonarParticle/Timer" to="PhysicsSmoothing/TopAnchor/Sonar/SonarParticle/PingEchoPlayer" method="_on_Timer_timeout"]
[connection signal="timeout" from="PhysicsSmoothing/TopAnchor/Sonar/SonarParticle/GabageCollectTimer" to="PhysicsSmoothing/TopAnchor/Sonar/SonarParticle" method="_on_GabageCollectTimer_timeout"]
[connection signal="timeout" from="PhysicsSmoothing/TopAnchor/Sonar/SonarAggroArea/SonarAggroTimer" to="PhysicsSmoothing/TopAnchor/Sonar" method="_on_SonarAggroTimer_timeout"]
[connection signal="timeout" from="PhysicsSmoothing/TerrainDamagePlayer/Timer" to="PhysicsSmoothing/TerrainDamagePlayer" method="_on_Timer_timeout"]
[connection signal="timeout" from="PhysicsSmoothing/LittleDamagePlayer/Timer" to="PhysicsSmoothing/LittleDamagePlayer" method="_on_Timer_timeout"]
[connection signal="timeout" from="PhysicsSmoothing/BigDamagePlayer/Timer" to="PhysicsSmoothing/BigDamagePlayer" method="_on_Timer_timeout"]
